# Calculator

./: CMakeLists.txt  Calculator.ui  calculator.cpp  calculator.h  main.cpp
